--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Monoton&family=Preahvihear&family=Roboto+Slab:wght@800&display=swap");
+
+html {
+  font-size: 62.5%;
+}
+
 * {
   margin: 0;
+  box-sizing: border-box;
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+header {
+  padding-top: 3rem;
+  background: linear-gradient(0deg, #a5d8ff, #e7f5ff);
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 0 2.8rem;
+  overflow-y: hidden;
+}
+
+header h2 {
+  position: absolute;
+  top: 80%;
+  right: 0;
+  left: 0;
+  text-align: end;
+  padding-right: 18.2rem;
+  font-size: 3rem;
+  color: #868e96;
+  font-family: "Merriweather", serif;
+}
+
+footer h2 {
+  padding: 4rem;
+  background-color: #5c4b99;
+  text-align: center;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 4.8rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
