--- a/src/Styles/queries.css
+++ b/src/Styles/queries.css
@@ -1,11 +1,41 @@
-@media (max-width: 910px) {
+@media (max-width: 1100px) {
   html {
     font-size: 50%;
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   html {
     font-size: 46%;
+  }
+}
+
+@media (max-width: 820px) {
+  html {
+    font-size: 30%;
+  }
+}
+
+@media (max-width: 570px) {
+  html {
+    font-size: 22%;
+  }
+}
+
+@media (max-width: 450px) {
+  html {
+    font-size: 15%;
+  }
+  .logo {
+    font-size: 100px;
+  }
+}
+
+@media (max-width: 420px) {
+  html {
+    font-size: 10%;
+  }
+  .logo {
+    font-size: 70px;
   }
 }
