--- a/src/Styles/Form.css
+++ b/src/Styles/Form.css
@@ -37,6 +37,10 @@ button {
   color: white;
 }
 
+.selector:focus::placeholder {
+  color: rgba(0, 0, 0, 0.285);
+}
+
 button {
   padding: 1.2rem 3.6rem;
 }
