--- a/src/Styles/Packing.css
+++ b/src/Styles/Packing.css
@@ -1,7 +1,7 @@
 .packing-list {
   flex: 1;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, max(1fr));
   padding: 10rem;
   padding-top: 4rem;
 }
