--- a/src/Styles/Packing.css
+++ b/src/Styles/Packing.css
@@ -1,9 +1,10 @@
 .packing-list {
-  flex: 1;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   padding: 10rem;
   padding-top: 4rem;
+  height: 40rem;
+  overflow: scroll;
 }
 
 .container-packing {
@@ -25,11 +26,14 @@
 }
 
 .container-packing-list {
+  display: grid;
+  grid-template-columns: 180px 1fr;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   margin: 1rem 10rem 1rem 10rem;
   padding: 1rem;
   border: black solid 0.2rem;
-  min-height: 40rem;
 }
 
 .selector-sorting {
@@ -41,4 +45,5 @@
   padding: 1.2rem 2rem;
   color: white;
   border-radius: 1rem;
+  grid-column: 1/3;
 }
