--- a/src/Styles/queries.css
+++ b/src/Styles/queries.css
@@ -24,6 +24,37 @@
   .logo {
     font-size: 40rem;
   }
+  .item p,
+  .item button {
+    font-size: 12px;
+  }
+  .item .checkbox {
+    width: 12px;
+    height: 12px;
+  }
+  header h2 {
+    font-size: 16px;
+  }
+  .selector,
+  .class-btn,
+  .option-select,
+  .form-container h1 {
+    font-size: 8px;
+  }
+
+  .selector {
+    width: 60px;
+  }
+
+  .class-btn {
+    padding: 4px 14px;
+  }
+  .selector-sorting {
+    font-size: 8px;
+  }
+  footer h2 {
+    font-size: 8px;
+  }
 }
 
 @media (max-width: 380px) {
